Fix na senshi, como de costume

--- a/public/index.html
+++ b/public/index.html
@@ -728,9 +728,9 @@
         encantamentoArmadura = "nenhum";
         itemDAtaque = 10;
         itemDIgnorarDefesa = 10;
-        if(parseInt($("#refinoItemCapa").val()) == 7) { itemDAtaque = 30; itemDIgnorarDefesa = 30; }
-        if(parseInt($("#refinoItemCapa").val()) == 8) { itemDAtaque = 50; itemDIgnorarDefesa = 50; }
-        if(parseInt($("#refinoItemCapa").val()) >= 9) { itemDAtaque = 80; itemDIgnorarDefesa = 70; }
+        if(parseInt($("#refinoItemArmadura").val()) == 7) { itemDAtaque = 30; itemDIgnorarDefesa = 30; }
+        if(parseInt($("#refinoItemArmadura").val()) == 8) { itemDAtaque = 50; itemDIgnorarDefesa = 50; }
+        if(parseInt($("#refinoItemArmadura").val()) >= 9) { itemDAtaque = 80; itemDIgnorarDefesa = 70; }
       }
 
       function vorags() {
