--- a/public/index.html
+++ b/public/index.html
@@ -372,6 +372,10 @@
               <option value="19316a">Capuz de Esquilo [1] - Ativado</option>
               <option value="19296">Chapéu Chique com Pena [1]</option>
               <option value="400006">Cocar do Orc Herói [1]</option>
+              <option value="5457a">Coelhinho de Cabeça [1] (Anti-Atraso 1/2)</option>
+              <option value="5457b">Coelhinho de Cabeça [1] (Faro Aguçado 1/2)</option>
+              <option value="5457c">Coelhinho de Cabeça [1] (Lutador 1/2)</option>
+              <option value="5457d">Coelhinho de Cabeça [1] (Mira Apurada 1/2)</option>
               <option value="18541">Chapéu de Caçador [1]</option>
               <option value="19019">Coroa da Rainha de Copas [1]</option>
               <option value="5127">Elmo de Morrigane</option>
@@ -507,7 +511,8 @@
               <option value="18823">Diadema do Grifo</option>
               <option value="19138">Diadema do Serafim</option>
               <option value="18912">Item qualquer com slot</option>
-              <option value="5918">Marcas de Comodo</option>
+              <option value="5918a">Marcas de Comodo [1]</option>
+              <option value="5918b">Marcas de Comodo [0]</option>
               <option value="19456a">Máscara do Tengu Corvo [1]</option>
               <option value="19456b">Máscara do Tengu Corvo [0]</option>
               <option value="5325">Óculos Biônicos</option>
@@ -636,12 +641,14 @@
           <td colspan="12" align="center">
             <select autocomplete="off" id="itemBaixo" style="width:100%">
               <option value="">Nenhum</option>
+              <option value="18858">Balão de Angeling Natalino</option>
               <option value="18844">Balão de Pouring Natalino</option>
               <option value="19306">Carta de Comodo</option>
               <option value="19101">Familiar de Combate</option>
               <option value="19268">Hálito de Verme com Rosto</option>
               <option value="19305a">Lampião das Fadas (Faro Aguçado 1/2)</option>
               <option value="19305b">Lampião das Fadas (Mira 1 / DES +1)</option>
+              <option value="19305c">Lampião das Fadas (ATQ 2% / Lutador 2)</option>
               <option value="28502">Lenço Infame</option>
               <option value="5361">Máscara de Fugitivo</option>
               <option value="19112">Pergaminho do Tengu</option>
@@ -1727,6 +1734,7 @@
               <option value="28492d">Diário do Renegado [1] - Força Violentíssima e Frenesi</option>
               <option value="2928a">Luva da Sorte [1]</option>
               <option value="2928b">Luva da Sorte [0]</option>
+              <option value="28434">Luvas do Pugilista [1]</option>
               <option value="28531">Luvas do Vigor [1]</option>
               <option value="28565">Máscara de Oni [1]</option>
               <option value="2651">Pingente de Morrigante</option>
@@ -1878,6 +1886,7 @@
               <option value="28492d">Diário do Renegado [1] - Força Violentíssima e Frenesi</option>
               <option value="2928a">Luva da Sorte [1]</option>
               <option value="2928b">Luva da Sorte [0]</option>
+              <option value="28434">Luvas do Pugilista [1]</option>
               <option value="28531">Luvas do Vigor [1]</option>
               <option value="28565">Máscara de Oni [1]</option>
               <option value="2651">Pingente de Morrigante</option>
