Adicionado o Sobretudo do Mestre

--- a/public/index.html
+++ b/public/index.html
@@ -1341,6 +1341,7 @@
               <option value="2576">Mochila da Aventura [1]</option>
               <option value="20773">Motor E.X.C.</option>
               <option value="20718a">Pele da Rainha Verme [1] (Des 4/4, Super Des)</option>
+              <option value="480023">Sobretudo do Mestre [1]</option>
               <option value="20799">Toalha do Mochileiro [1]</option>
             </select>
           </td>
