Adição de novos itensss

--- a/public/index.html
+++ b/public/index.html
@@ -508,6 +508,7 @@
           <td colspan="7" align="center">
             <select autocomplete="off" id="itemMeio" style="width:100%;margin-right:1%">
               <option value="">Nenhum</option>
+              <option value="19495">Asinhas Discretas [1]</option>
               <option value="18823">Diadema do Grifo</option>
               <option value="19138">Diadema do Serafim</option>
               <option value="18912">Item qualquer com slot</option>
@@ -783,6 +784,7 @@
               <option value="">Nenhum</option>
               <option value="15374">Armadura Eclipse [1]</option>
               <option value="15272">Armadura da Khalitzburg [1]</option>
+              <option value="2375">Armadura de Diabolus [1]</option>
               <option value="15240">Armadura do Dragão Vermelho [1]</option>
               <option value="15346">Armadura do Herói Afortunado [1]</option>
               <option value="15353">Armadura do Herói Ágil [1]</option>
@@ -792,6 +794,7 @@
               <option value="15283">Couraça de Senshi [1]</option>
               <option value="15421">Robe da Graça Divina [1]</option>
               <option value="15383">Sobretudo do Senhor do Tempo [1]</option>
+              <option value="15073">Traje Anti-Magia [1]</option>
               <option value="19048">Traje de Luta Jogos Vorags [1]</option>
               <option value="15097b">Traje Heroico da Ocultação [1] - Ativo</option>
               <option value="15254">Vestido Abissal [1]</option>
@@ -1330,6 +1333,9 @@
             <select autocomplete="off" id="itemCapa" style="width:100%;margin-right:1%">
               <option value="">Nenhum</option>
               <option value="2589">Asas de Arcanjo Caído [1]</option>
+              <option value="20944">Capa Anti-Magia [1]</option>
+              <option value="20925">Capa do Comandante [1]</option>
+              <option value="20955">Guardiã do Natal [1]</option>
               <option value="2519">Manteau de Morrigane</option>
               <option value="20939">Manto do Senhor do Tempo [1]</option>
               <option value="20941">Manto Fênix [1]</option>
@@ -1430,6 +1436,28 @@
               <option value="">Nenhum</option>
               <option value="exc-e3-atq">A-ATQ</option>
               <option value="exc-e3-vda">A-VdA</option>
+            </select>
+          </td>
+        </tr>
+        <tr class="alwaysShow encantamentos encantamentosExploradoresCapa">
+          <td colspan="6" align="center">
+            <select autocomplete="off" id="exploradorescapa-e1" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="exp-e1-aa1">Anti-Atraso 1</option>
+              <option value="exp-e1-aa2">Anti-Atraso 2</option>
+              <option value="exp-e1-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e1-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e1-sa">Super Agilidade</option>
+            </select>
+          </td>
+          <td colspan="6">
+            <select autocomplete="off" id="exploradorescapa-e2" style="width:100%">
+              <option value="">Nenhum</option>
+              <option value="exp-e2-aa1">Anti-Atraso 1</option>
+              <option value="exp-e2-aa2">Anti-Atraso 2</option>
+              <option value="exp-e2-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e2-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e2-sa">Super Agilidade</option>
             </select>
           </td>
         </tr>
@@ -1560,6 +1588,7 @@
               <option value="">Nenhum</option>
               <option value="22172">Botas Aladas</option>
               <option value="22171">Botas Ancestrais [1]</option>
+              <option value="2433">Botas de Diabolus [1]</option>
               <option value="22204">Botas do Senhor do Tempo [1]</option>
               <option value="22002a">Botas Temporais AGI [1]</option>
               <option value="22002b">Botas Temporais AGI [0]</option>
@@ -1571,6 +1600,7 @@
               <option value="22005b">Botas Temporais SOR [0]</option>
               <option value="2408">Grilhões</option>
               <option value="22071">Salto Alto Elegante [1]</option>
+              <option value="470056">Sapatos do Perseguidor</option>
               <option value="22195">Sapatos Inteligentes [1]</option>
               <option value="22082">Sapatos Luxuosos [1]</option>
               <option value="2448">Sapatos Velozes</option>
@@ -1723,7 +1753,9 @@
               <option value="32243">Anel do Desbravador [1]</option>
               <option value="32221">Anel do Senhor do Tempo [1]</option>
               <option value="28561">Anel Dracônico do Veterano [1]</option>
-              <option value="2655">Bola de Ferro Ensanguentada</option>
+              <option value="28594">Anel Temporal [1]</option>
+              <option value="2655">Bola de Ferro Ensanguentada [0]</option>
+              <option value="28388">Bola de Ferro Ensanguentada [1]</option>
               <option value="28411">Brincos de Esmeralda [1]</option>
               <option value="490031">Cauda de Petal [1]</option>
               <option value="28501">Chifres de Kirin [1]</option>
@@ -1767,6 +1799,36 @@
               <option value="4923">Essência de Morroc SOR1</option>
               <option value="4924">Essência de Morroc SOR2</option>
               <option value="4925">Essência de Morroc SOR3</option>
+            </select>
+          </td>
+        </tr>
+        <tr class="alwaysShow encantamentos encantamentosExploradoresAcess1">
+          <td colspan="6" align="center">
+            <select autocomplete="off" id="exploradoresacess1-e1" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="exp-e1-atq3">ATQ +3%</option>
+              <option value="exp-e1-aa1">Anti-Atraso 1</option>
+              <option value="exp-e1-aa2">Anti-Atraso 2</option>
+              <option value="exp-e1-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e1-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e1-ma1">Mira Apurada 1</option>
+              <option value="exp-e1-ma2">Mira Apurada 2</option>
+              <option value="exp-e1-el1">Espírito do Lutador 1</option>
+              <option value="exp-e1-el2">Espírito do Lutador 2</option>
+            </select>
+          </td>
+          <td colspan="6">
+            <select autocomplete="off" id="exploradoresacess1-e2" style="width:100%">
+              <option value="">Nenhum</option>
+              <option value="exp-e2-atq3">ATQ +3%</option>
+              <option value="exp-e2-aa1">Anti-Atraso 1</option>
+              <option value="exp-e2-aa2">Anti-Atraso 2</option>
+              <option value="exp-e2-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e2-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e2-ma1">Mira Apurada 1</option>
+              <option value="exp-e2-ma2">Mira Apurada 2</option>
+              <option value="exp-e2-el1">Espírito do Lutador 1</option>
+              <option value="exp-e2-el2">Espírito do Lutador 2</option>
             </select>
           </td>
         </tr>
@@ -1875,7 +1937,9 @@
               <option value="32243">Anel do Desbravador [1]</option>
               <option value="32221">Anel do Senhor do Tempo [1]</option>
               <option value="28561">Anel Dracônico do Veterano [1]</option>
-              <option value="2655">Bola de Ferro Ensanguentada</option>
+              <option value="28594">Anel Temporal [1]</option>
+              <option value="2655">Bola de Ferro Ensanguentada [0]</option>
+              <option value="28388">Bola de Ferro Ensanguentada [1]</option>
               <option value="28411">Brincos de Esmeralda [1]</option>
               <option value="490031">Cauda de Petal [1]</option>
               <option value="28501">Chifres de Kirin [1]</option>
@@ -1919,6 +1983,36 @@
               <option value="4923">Essência de Morroc SOR1</option>
               <option value="4924">Essência de Morroc SOR2</option>
               <option value="4925">Essência de Morroc SOR3</option>
+            </select>
+          </td>
+        </tr>
+        <tr class="alwaysShow encantamentos encantamentosExploradoresAcess2">
+          <td colspan="6" align="center">
+            <select autocomplete="off" id="exploradoresacess2-e1" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="exp-e1-atq3">ATQ +3%</option>
+              <option value="exp-e1-aa1">Anti-Atraso 1</option>
+              <option value="exp-e1-aa2">Anti-Atraso 2</option>
+              <option value="exp-e1-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e1-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e1-ma1">Mira Apurada 1</option>
+              <option value="exp-e1-ma2">Mira Apurada 2</option>
+              <option value="exp-e1-el1">Espírito do Lutador 1</option>
+              <option value="exp-e1-el2">Espírito do Lutador 2</option>
+            </select>
+          </td>
+          <td colspan="6">
+            <select autocomplete="off" id="exploradoresacess2-e2" style="width:100%">
+              <option value="">Nenhum</option>
+              <option value="exp-e2-atq3">ATQ +3%</option>
+              <option value="exp-e2-aa1">Anti-Atraso 1</option>
+              <option value="exp-e2-aa2">Anti-Atraso 2</option>
+              <option value="exp-e2-pc1">Pedra de Crítico 1</option>
+              <option value="exp-e2-pc2">Pedra de Crítico 2</option>
+              <option value="exp-e2-ma1">Mira Apurada 1</option>
+              <option value="exp-e2-ma2">Mira Apurada 2</option>
+              <option value="exp-e2-el1">Espírito do Lutador 1</option>
+              <option value="exp-e2-el2">Espírito do Lutador 2</option>
             </select>
           </td>
         </tr>
