Adicionada Couraça do Orc

--- a/public/index.html
+++ b/public/index.html
@@ -792,6 +792,7 @@
               <option value="15278">Armadura do Herói Robusto [1]</option>
               <option value="15128">Colete E.X.C.</option>
               <option value="15283">Couraça de Senshi [1]</option>
+              <option value="450142">Couraça do Orc [1]</option>
               <option value="15421">Robe da Graça Divina [1]</option>
               <option value="15383">Sobretudo do Senhor do Tempo [1]</option>
               <option value="15073">Traje Anti-Magia [1]</option>
@@ -811,6 +812,7 @@
               <option value="4419">Carta Ktullanux</option>
               <option value="4408">Carta Pesar Noturno</option>
               <option value="4337">Carta Porcellio</option>
+              <option value="4135">Carta Senhor dos Orcs</option>
             </select>
           </td>
         </tr>
