--- a/public/index.html
+++ b/public/index.html
@@ -968,8 +968,12 @@
               <option value="">Nenhum</option>
               <option value="18170">Arco Ancestral [2]</option>
               <option value="18170b">Arco Ancestral [2] - Ativado</option>
-              <option value="18115">Arco de Orc [1]</option>
               <option value="1732">Arco da Terra [1]</option>
+              <option value="18133">Arco de Iansã [2]</option>
+              <option value="18115">Arco de Orc [1]</option>
+              <option value="18142">Arco de Oxóssi [2]</option>
+              <option value="18144">Arco de Oxum [2]</option>
+              <option value="18152">Arco de Xangô [2]</option>
               <option value="18125">Arco Demoníaco [2]</option>
               <option value="1731">Arco Glacial [1]</option>
               <option value="1730">Arco Incendiário [1]</option>
@@ -1117,6 +1121,17 @@
               <option value="catapa-e2-pc3">Pedra de Crítico 3</option>
               <option value="catapa-e2-pc2">Pedra de Crítico 2</option>
               <option value="catapa-e2-pc1">Pedra de Crítico 1</option>
+            </select>
+          </td>
+        </tr>
+        <tr class="alwaysShow encantamentos encantamentosArmasBrasilis">
+          <td colspan="12">
+            <select autocomplete="off" id="armabrasillis-e1" style="width:100%">
+              <option value="">Nenhum</option>
+              <option value="armabrasillis-e1-aa4">Anti-Atraso 4</option>
+              <option value="armabrasillis-e1-el10">Espírito do Lutador 10</option>
+              <option value="armabrasillis-e1-ma10">Mira Apurada 10</option>
+              <option value="armabrasillis-e1-mo4">Mortal 4</option>
             </select>
           </td>
         </tr>
