Novos itens: Adorno Florido, Behemot, Esquecidos, Ornamento

--- a/public/index.html
+++ b/public/index.html
@@ -508,6 +508,7 @@
           <td colspan="7" align="center">
             <select autocomplete="off" id="itemMeio" style="width:100%;margin-right:1%">
               <option value="">Nenhum</option>
+              <option value="19437">Adorno Florido [1]</option>
               <option value="19495">Asinhas Discretas [1]</option>
               <option value="18823">Diadema do Grifo</option>
               <option value="19138">Diadema do Serafim</option>
@@ -518,6 +519,8 @@
               <option value="19456b">Máscara do Tengu Corvo [0]</option>
               <option value="5325">Óculos Biônicos</option>
               <option value="2202">Óculos Escuros [1]</option>
+              <option value="19452">Ornamento Divino [1]</option>
+              <option value="19451">Ornamento Divino [0]</option>
               <option value="19393">Pedra do Desbravador</option>
               <option value="19444a">Tapa-Olho Cósmico [1]</option>
               <option value="19444b">Tapa-Olho Cósmico [0]</option>
@@ -790,6 +793,7 @@
               <option value="15353">Armadura do Herói Ágil [1]</option>
               <option value="15354">Armadura do Herói Astuto [1]</option>
               <option value="15278">Armadura do Herói Robusto [1]</option>
+              <option value="15189">Armadura dos Esquecidos [1]</option>
               <option value="15128">Colete E.X.C.</option>
               <option value="15283">Couraça de Senshi [1]</option>
               <option value="450142">Couraça do Orc [1]</option>
@@ -1354,7 +1358,10 @@
               <option value="20925">Capa do Comandante [1]</option>
               <option value="20955">Guardiã do Natal [1]</option>
               <option value="2519">Manteau de Morrigane</option>
+              <option value="480053">Manto Behemoth [1]</option>
               <option value="20939">Manto do Senhor do Tempo [1]</option>
+              <option value="20749">Manto dos Esquecidos [1]</option>
+              <option value="20748">Manto dos Esquecidos [0]</option>
               <option value="20941">Manto Fênix [1]</option>
               <option value="20922">Manto Leviatã [1]</option>
               <option value="20964">Manto Temporal AGI [1]</option>
